--- a/Final-Report/introduction.tex
+++ b/Final-Report/introduction.tex
@@ -24,6 +24,8 @@ As well as being able to visualize the uncertainty, recent research\cite{uncerta
 
 Finally these visualizations have been wrapped up in a research tool that combines every stage in the reconstruction pipeline together. It allows the user to simulate a scan (section \ref{section:simulatescan}), reconstruct the image (section \ref{section:reconstruction}) and then visualize the results.
 
-The scan simulation feature allows you to take an existing, well reconstructed image and use this as a basis for creating new, lower resolution scans. The idea is that we can assume that the initial image is the 'perfect' reconstruction, create lower resolution scans from it, run our reconstruction algorithm and then compare the result to the original. This will allow different reconstruction algorithms to be thoroughly tested without having to scan thousands of patients. Currently a simple motion corruption simulation can be enabled which will allow the tolerance of a reconstruction algorithm to motion to be tested. Similarly this feature has been evaluated with expert users. See chapter \ref{chapter:evaluation}.
+The scan simulation feature allows an existing, well reconstructed image to be used as the basis for creating new, lower resolution scans. The idea is that we can assume that the initial image is the 'perfect' reconstruction, create lower resolution scans from it, run our reconstruction algorithm and then compare the result to the original. This will allow different reconstruction algorithms to be thoroughly tested without having to scan thousands of patients. Currently a simple motion corruption simulation can be enabled which will allow the tolerance of a reconstruction algorithm to motion to be tested. Similarly this feature has been evaluated with expert users. See chapter \ref{chapter:evaluation}.
 
-The reconstruction feature provides an easy interface to the fast GPU reconstruction implementation from a previous research paper\cite{gpureconstruction}. Additionally a prototype that allows the reconstruction process to be guided by marking landmarks on each of the slice stacks has been implemented. One way to improve the quality of the reconstruction, by guiding the registration process, is to manually mark on each of the slices stacks a set of landmarks (e.g. Left Eye, Right Eye, ...).
+The reconstruction feature provides an easy interface to the fast GPU (Graphics Processing Unit) reconstruction implementation from a previous research paper\cite{gpureconstruction}. This code takes a set of motion corrupted slice stacks (scans) and creates a single reconstructed volume by using SVR (slice-to-volume reconstruction) techniques. 
+
+Additionally one way to guide the reconstruction is by marking each slice stack with a set of landmarks (e.g. Left Eye, Right Eye, ...); this helps the registration step align each of the stacks. A prototype to allow these landmarks to be marked on each slice stack before reconstruction has been created.
