--- a/Final-Report/method.tex
+++ b/Final-Report/method.tex
@@ -66,13 +66,34 @@ The optional landmarking functionality allows the registration of each of the sl
 \clearpage
 \section{Visualizations}
 
+% ------------------------- %
+% ------ Uncertainty ------ %
+% ------------------------- %
+\subsection{Uncertainty}\label{method:uncertainty}
+Three different types of uncertainty have been considered, though with different reconstruction algorithms there may be other metrics that can be extracted.
+
+\begin{enumerate}
+  \item sampling - How many points in the original scans correspond to the area in the reconstruction? Some parts of reconstruction will have many points in the original stacks to use, but others will not and will have to be interpolated.
+  \item registration - How precisely is the registration known? Depending on the calibration of the scanner and the amount of movement that occurs during the scan our confidence in the registration will change.
+  \item intensity bias - Bias is an artefact that occurs in MRI that means that some areas of the image are darker than others, not due to the tissue itself, but due to the distance from the receiver coil. Some areas have more of this inhomogeneity than others and contrast will be affected.
+\end{enumerate}
+
+Having three separate 'channels' of uncertainty makes visualizing it more difficult. Trying to display all three at one time will likely be too much information to communicate at once however all of the visualizations developed are applicable to each individually or alternately the three types can be aggregated into one combined value.
+
+An aggregation of all three will be able to give a useful overview of the situation, however being able to isolate a single type of uncertainty is important as it gives the viewer an idea of what caused the reconstruction issues.
+
 \subsection{Pre-processing}
+Before the uncertainty is visualized it is first pre-processed. Figure \ref{fig:preprocesspipeline} illustrates the order in which the operations are applied.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.8\textwidth]{images/pre-process_pipeline.png}
+  \caption{Pre-processing pipeline overview.}
+  \label{fig:preprocesspipeline}
+\end{figure}
 
 \subsubsection*{Normalize}
 The uncertainty is linearly scaled, using a filter provided by ITK (RescaleIntensityImageFilter).
-
-\subsubsection*{Align to Scan}
-The image to world matrix of the scan is copied to the uncertainty volume. This results in pixel (x, y, z) in both the scan and uncertainty being mapped to the same point in space, allowing the overlay.
 
 \subsubsection*{Invert}
 The uncertainty is inverted, using a filter provided by ITK (InvertIntensityImageFilter).
@@ -135,6 +156,9 @@ The growing filter used in step 2 uses binary morphology to expand the mask. Fig
   \end{subfigure}
   \caption{Example of binary morphology.}\label{fig:growing}
 \end{figure}
+
+\subsubsection*{Align to Scan}
+The image to world matrix of the scan is copied to the uncertainty volume. This results in pixel (x, y, z) in both the scan and uncertainty being mapped to the same point in space, allowing the overlay.
 
 \clearpage
 \subsection{Test Uncertainties}\label{section:testuncertainties}
@@ -248,14 +272,14 @@ An issue found with variation 1 was that the renderer still draws the edge of th
 
 \begin{figure}[h]
   \centering
-  \begin{subfigure}[b]{0.5\textwidth}
+  \begin{subfigure}[b]{0.481\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/thresholdvariation1example.png}
     \caption{Simplified View}
     \label{fig:thresholdingvariation1example}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.5\textwidth}
+  \begin{subfigure}[b]{0.519\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/thresholdvariation1problem.png}
     \caption{Edge Artefacts}
     \label{fig:thresholdingvariation1artefacts}
