--- a/Final-Report/results.tex
+++ b/Final-Report/results.tex
@@ -13,7 +13,7 @@ The researchers were asked 'How useful is this feature for you?' and their respo
     \caption{1 is useless. 10 is very useful.}\label{fig:graph_scansimulation_1}
 \end{figure}
 
-The majority of users thought that this feature would be of use for them. The one notable exception on the graph was due to concerns that the complexity of the simulation currently implemented is a far cry from that required. More on that shortly.
+The majority of users thought that this feature would be of use for them. The one notable exception on the graph was due to concerns that the complexity of the simulation currently implemented is a far cry from that required.
 
 The users were then asked 'Does it include all of the parameters that you would expect?' and 'Is the simulation realistic enough?' to get an idea of what other features need to be implemented. Their responses are shown in figure \ref{fig:graph_scan_simulation23}.
 
@@ -41,7 +41,7 @@ Another suggestion was the ability to specify a scan by selecting the two endpoi
 The question about the realism required of the simulation prompted the largest response. Quickly the feature list for potential improvements grew. As a reminder the only artefact currently implemented is a simple rotation which takes effect in between scanning slices.
 
 \begin{itemize}
-  \item \textbf{Additional movement artefacts.} Movement during an MRI scan does not manifest itself as blur, like many other imaging techniques. Instead a number of different artefacts occur including replication, where multiple copies of the object appear, or shadowing where objects in motion appears darker than their surroundings.
+  \item \textbf{Additional movement artefacts.} Movement during an MRI scan does not manifest itself as blur, like many other imaging techniques. Instead a number of different artefacts occur including ghosting, where multiple copies of the object appear, or shadowing where objects in motion appears darker than their surroundings.
 
   \item \textbf{Translation + Enhanced Rotation}. Translations can be added alongside the rotations but there are also more fundamental changes that can be made to model the movement more realistically. Currently a uniform random variable decides the random rotation and this is unlikely to match the genuine movement of a fetus. For example a fetus is far more likely to nod than shake it's head. Data on fetal movement has been collected at different stages of development previously to establish behavioural patterns\cite{fetalmovement} and so this data could be repurposed to sample movements from a more representative distribution.
 
@@ -99,7 +99,7 @@ The plugin includes a simple tool that allows 13 landmarks to be specified on ea
 
 \begin{figure}[h]
     \centering
-  \includegraphics[width=0.8\textwidth]{images/evaluation/graph_reconstruction_landmark_times.png}
+  \includegraphics[width=0.95\textwidth]{images/evaluation/graph_reconstruction_landmark_times.png}
     \caption{There is large variance, but around 2 minutes seems reasonable.}\label{fig:landmarktimes}
 \end{figure}
 
